--- a/ea-vkks-web/src/main/webapp/resources/css/app.css
+++ b/ea-vkks-web/src/main/webapp/resources/css/app.css
@@ -1,1 +1,1 @@
-.gerb{background-image:url('../images/gerb.png')!important;background-size:100% auto}
+.gerb{background-image:url('../images/gerb.png')!important;background-size:100% auto;width:129px;height:145px}
