--- a/ea-vkks-web/src/main/webapp/resources/css/style.css
+++ b/ea-vkks-web/src/main/webapp/resources/css/style.css
@@ -1,14 +1,19 @@
-body{
+.x-body{
     background:url('../images/project_images/bg_vkks.jpg');
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    background-position:center center;
+    background-attachment:fixed;
 }
-.header_cls{
-    text-align:center;
+.x-viewport > body.x-body{
+    padding:10px 30px;
 }
 h1{
     color:#4E7AAF;
     font-family:'DEAD_SECRETARY_Cyr';
     font-size:34px;
     font-stretch:expanded;
+    text-align:center;
 }
 .gerb{
     background-image:url('../images/project_images/gerb.png');
