--- a/ea-vkks-web/src/main/login/resources/css/login_fonts.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_fonts.css
@@ -1,10 +1,10 @@
 @font-face{
     font-family:'DEAD_SECRETARY_Cyr';
     src:url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.eot');
-    src:url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.eot?#iefix') format('embedded-opentype'),
+    src:/*url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.woof2') format('woof2'),
-        url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.woof') format('woof'),
-        url('../fonts/DEAD_SECRETARY_Cyr/DEAD SECRETARY Cyr.ttf') format('truetype'),
+        url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.woof') format('woof'),*/
+        url('../fonts/DEAD_SECRETARY_Cyr/DEAD_SECRETARY_Cyr.ttf') format('truetype'),
         url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.svg') format('svg');
 }
 
