--- a/ea-vkks-web/src/main/earh/resources/css/app_fonts.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_fonts.css
@@ -4,7 +4,7 @@
     src:url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.woof2') format('woof2'),
         url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.woof') format('woof'),
-        url('../fonts/DEAD_SECRETARY_Cyr/DEAD SECRETARY Cyr.ttf') format('truetype'),
+        url('../fonts/DEAD_SECRETARY_Cyr/DEAD_SECRETARY_Cyr.ttf') format('truetype'),
         url('../fonts/DEAD_SECRETARY_Cyr/dead_secretary_cyr-webfont.svg') format('svg');
 }
 
