--- a/ea-vkks-web/src/main/webapp/resources/css/login_clear.css
+++ b/ea-vkks-web/src/main/webapp/resources/css/login_clear.css
@@ -1,1 +1,9 @@
-.x-btn.x-btn-default-small,.x-btn-over.x-btn-default-small{border:0;background-image:none}.x-form-text,.x-form-text-default{background-image:none}
+.x-btn.x-btn-default-small,
+.x-btn-over.x-btn-default-small{
+    border:none;
+    background-image:none;
+}
+.x-form-text,
+.x-form-text-default{
+    background-image:none;
+}
