--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -5,15 +5,15 @@
     background-position:center center;
     background-attachment:fixed;
 }
-/*сложная процедура выстраивания ширины (хедер)*/
-.x-body > .x-box-inner,
+/*сложная процедура выстраивания ширины (хедер)  временно убраны до разбирательства с внутреннеми страницами*/
+/*.x-body > .x-box-inner,
 .x-body .x-box-inner > .x-box-target{
     width:100% !important;
-}
+}*/
 .x-viewport > body.x-body{
     padding:10px 30px;
 }
-.header_cls{
+/*.header_cls{
     width:100%;
 }
 .header_cls > .x-box-inner{
@@ -21,7 +21,7 @@
 }
 .title_head{
     width: calc(100% - 150px);
-}
+}*/
 .title_head .title_head{
     border-bottom-image:url('../images/project_images/blue_underline.png');
     -moz-border-image:url('../images/project_images/blue_underline.png') 0 1 10 10 stretch stretch;
@@ -31,9 +31,9 @@
     border-bottom:2px solid;
     
 }
-.title_head div{
+/*.title_head div{
     width:100% !important;
-}
+}*/
 /*----*/
 h1{
     color:#4E7AAF;
@@ -49,7 +49,7 @@ h1{
     height:145px
 }
 /*стиль для страниц навигации*/
-.header_cls ~ .x-container{
+/*.header_cls ~ .x-container{       
     width:640px;
     margin:auto !important;
     position:relative !important;
@@ -60,4 +60,4 @@ h1{
     height:80px;
     padding-top:25px;
     padding-botom:25px;
-}
+}*/
