--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -5,7 +5,7 @@
     background-position:center center;
     background-attachment:fixed;
 }
-/*сложная процедура выстраивания ширины (хедер)  временно убраны до разбирательства с внутреннеми страницами*/
+/*сложная процедура выстраивания ширины (хедер)  временно убраны до разбирательства с внутренними страницами*/
 /*.x-body > .x-box-inner,
 .x-body .x-box-inner > .x-box-target{
     width:100% !important;
