--- a/ea-vkks-web/src/main/login/resources/css/icons.css
+++ b/ea-vkks-web/src/main/login/resources/css/icons.css
@@ -7,17 +7,23 @@ and open the template in the editor.
     Created on : 24.11.2014, 17:16:35
     Author     : shapovalova
 */
+a.x-btn.x-btn-over span{
+    text-decoration:underline;
+}
 .x-btn.doc_cls,
 .x-btn.adm_cls{
     padding-left:95px;
     background-repeat:no-repeat;
 }
 .x-btn.doc_cls,
-.x-btn.doc_cls.x-btn-over{
+.x-btn.doc_cls.x-btn-over,
+a.x-btn.doc_cls.x-btn-pressed{
     background-image:url('../images/project_images/doc.png');
     padding-left:105px;
 }
 .x-btn.adm_cls,
-.x-btn.adm_cls.x-btn-over{
+.x-btn.adm_cls.x-btn-over,
+a.x-btn.adm_cls.x-btn-pressed{
     background-image:url('../images/project_images/adm.png');
+    margin-left:25%;
 }
