--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -38,10 +38,15 @@ textarea.x-form-text.x-form-text-default{
     }
 /**/
 /*кнопки*/
-a.x-btn.buttons_style{
+a.x-btn.buttons_style,
+a.x-btn.x-btn-focus.x-btn-default-small{
     background-color:#5781B4;
     border-radius:6px;
     padding:10px 15px;
+}
+a.x-btn.x-btn-over.buttons_style,
+a.x-btn.x-btn-over.x-btn-pressed.buttons_style{
+    background-color:#F0A342;
 }
 .buttons_style span{
     color:#fff;
