--- a/ea-vkks-web/src/main/login/resources/css/login_clear.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_clear.css
@@ -7,7 +7,8 @@ a.x-btn.x-btn-pressed.x-btn-default-small{
     background-color:transparent;
 }
 a.x-btn.x-btn-focus.x-btn-default-small{
-   background-image:none; 
+    border:none;
+    background-image:none;
 }
 a span.x-btn-button-default-small{
     height:auto;        /*?*/
