--- a/ea-vkks-web/src/main/earh/resources/css/app_clear.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_clear.css
@@ -7,7 +7,8 @@ a.x-btn.x-btn-pressed.x-btn-default-small{
     background-color:transparent;
 }
 a.x-btn.x-btn-focus.x-btn-default-small{
-   background-image:none; 
+    border:none;
+    background-image:none;
 }
 a span.x-btn-button-default-small{
     height:auto;        /*?*/
@@ -38,4 +39,11 @@ div.x-panel-header-default{
 div.x-panel-header-default,
 div.x-panel-body-default{
     border:none;
+}
+/*toolbar*/
+div.x-toolbar-default{
+    background-color:transparent;
+    background-image:none;
+    border:none;
+    
 }
