мелкие правки к главным

--- a/ea-vkks-web/src/main/login/resources/css/login_clear.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_clear.css
@@ -6,7 +6,7 @@ a.x-btn.x-btn-pressed.x-btn-default-small{
     background-image:none;
     background-color:transparent;
 }
-a.x-btn.x-btn-focus.x-btn-default-small{
+a.x-btn-focus.x-btn-default-small{
     border:none;
     background-image:none;
 }
