--- a/ea-vkks-web/src/main/earh/resources/css/app_clear.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_clear.css
@@ -1,7 +1,9 @@
 /*кнопки*/
 .x-btn.x-btn-default-small,
 a.x-btn-over.x-btn-default-small,
-a.x-btn.x-btn-pressed.x-btn-default-small{
+a.x-btn.x-btn-pressed.x-btn-default-small,
+a.x-btn-over.x-btn-default-toolbar-small,
+a.x-btn.x-btn-pressed.x-btn-default-toolbar-small{
     border:none;
     background-image:none;
     background-color:transparent;
