--- a/ea-vkks-web/src/main/login/resources/css/login_style.css
+++ b/ea-vkks-web/src/main/login/resources/css/login_style.css
@@ -108,8 +108,6 @@ h1{
     width:800px !important; 
     margin:auto !important;
     position:relative !important;
-}
-.header_cls ~ .x-container{
     left:0 !important;
 }
 .main_page .x-autocontainer-outerCt{
@@ -140,6 +138,7 @@ h1{
 .login_page{
     margin: 5% auto !important;
     width:60% !important;
+    left:0 !important;
 }
 .login_page .x-panel-header,
 .login_page .x-panel-header div{
