--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -24,17 +24,48 @@ textarea.x-form-text.x-form-text-default{
     min-height:25px;
 }
     /*combobox*/
-    .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"]{
-        /*padding-right:24px;*/
+    .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
+    .x-border-box .x-form-text-wrap.x-form-trigger-click input[id*="combo"]{
+        padding-right:24px;
+        box-sizing:padding-box !important;  /*для хрома*/
     }
+    .x-border-box div[id*="combo"].x-form-trigger-default,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+    .x-border-box div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+    .x-border-box div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+        display:inline;     /*для хрома*/
+        box-sizing:padding-box !important; /*для хрома*/
+        padding:0 9px;      /*для хрома*/
+    }
+    
     div[id*="combo"].x-form-trigger-default,
-    div[id*="treepicker"].x-form-trigger-default{
+    div[id*="treepicker"].x-form-trigger-default,
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
         background-image:url('../images/project_images/triangle.png');
         background-repeat:no-repeat;
         background-position:center;
         margin-left:-20px;
         width:20px;
         border-left:1px solid #809EDA;
+    }
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-over,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-over,
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-focus,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-focus,
+    div[id*="combo"].x-form-trigger-default.x-form-trigger-click,
+    div[id*="treepicker"].x-form-trigger-default.x-form-trigger-click{
+        background-color:rgba(235,240,248,.5);
     }
 /**/
 /*кнопки*/
