--- a/ea-vkks-web/src/main/earh/resources/css/app_style.css
+++ b/ea-vkks-web/src/main/earh/resources/css/app_style.css
@@ -24,6 +24,22 @@ textarea.x-form-text.x-form-text-default{
     min-height:25px;
 }
     /*combobox*/
+    @media all and (-webkit-min-device-pixel-ratio:0) {
+        .x-form-dirty div[id*="combo"].x-form-trigger-default{
+            top:10px;
+            position:relative;
+        }
+    }
+    @media screen and (min-width:0\0) {
+        div[id*="combo"].x-form-trigger-default{
+            top:6px;
+            position:relative;
+        }
+        .x-form-dirty div[id*="combo"].x-form-trigger-default{
+            top:6px;
+            position:relative;
+        }
+    }
     .x-border-box .x-form-text-wrap.x-form-text-wrap-default input[id*="combo"],
     .x-border-box .x-form-text-wrap.x-form-trigger-focus input[id*="combo"],
     .x-border-box .x-form-text-wrap.x-form-trigger-over input[id*="combo"],
